fixed jumbotron scale issue on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,12 +143,20 @@ footer {
 }
 
 @media screen
-and (max-width : 1000px) {
+and (max-width : 850px) {
   .project-img {
     width: 80%;
   }
 
   .skill-img {
     width: 30%;
+  }
+
+  .jumbotron {
+    height: 200px;
+  }
+
+  .jumbo-header {
+    margin-top: 28px;
   }
 }
